posta/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posta
  namespace: posta
  labels:
    app: posta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posta
  template:
    metadata:
      labels:
        app: posta
    spec:
      containers:
        - name: app
          image: iamenr0s/posta:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
              name: http
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
